--- a/widgets/rooms/assets/css/style.css
+++ b/widgets/rooms/assets/css/style.css
@@ -327,18 +327,6 @@
   color: #000;
   font-size: 24px;
 }
-@media only screen and (max-width: 768px) {
-  .omnibees-rooms-list .room-details {
-    display: block;
-  }
-  .omnibees-rooms-list .room-photos {
-    width: 100%;
-  }
-  .omnibees-rooms-list .room-avaiable-rates .rate-info {
-    display: none;
-  }
-}
-
 .glide {
   position: relative;
   width: 100%;
@@ -392,4 +380,37 @@
 }
 .glide--rtl {
   direction: rtl
+}
+@media only screen and (max-width: 768px) {
+  .omnibees-rooms-list .room-details {
+    display: block;
+  }
+  .omnibees-rooms-list .room-photos {
+    width: 100%;
+  }
+  .omnibees-rooms-list .room-avaiable-rates .rate-info {
+    display: none;
+  }
+  .omnibees-rooms-list .omnibees-calendar {
+    flex-direction: column;
+  }
+  .omnibees-rooms-list .room-avaiable-rates .rate-details {
+    display: flex;
+    flex-direction: column;
+  }
+  .omnibees-rooms-list .room-avaiable-rates .rate-details .rate-price {
+    width: 100%;
+  }
+  .omnibees-rooms-list .room-avaiable-rates .rate-details .rate-book {
+    margin: 10px 0 0 0;
+    width: 100%;
+  }
+  .omnibees-rooms-list .room-avaiable-rates .rate-details .rate-book a{
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  .omnibees-rooms-list .room-avaiable-rates{
+    height: 210px;
+  }
 }
