--- a/widgets/rooms/assets/css/style.css
+++ b/widgets/rooms/assets/css/style.css
@@ -241,6 +241,7 @@
 .omnibees-calendar input,
 .omnibees-calendar label,
 .omnibees-calendar select {
+  font-family: sans-serif;
   display: block;
   width: 100%;
   padding: 10px 5px;
