--- a/widgets/rooms/assets/css/style.css
+++ b/widgets/rooms/assets/css/style.css
@@ -316,6 +316,27 @@
   margin: 0 5px;
   line-height: 1.5;
 }
+
+
+.omnibees-calendar .omnibees-search-result{
+   display: flex;
+    flex-direction: column;
+    justify-content: flex-end; 
+}
+.omnibees-calendar .omnibees-search-result #btn-search-result {
+    background: #F4C714;
+    border-radius: 3px;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #000;
+    transition: ease-in-out 0.2s all;
+    border: 1px solid transparent;
+}
+
+
+
 .omnibees-calendar .flatpicker-omnibees {
   flex: 2;
 }
